// buildscript는 맨 위에 와야 함
buildscript {
    ext {
        flywayVersion = '10.19.0'  // 최신 버전
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.flywaydb:flyway-gradle-plugin:${flywayVersion}"
        classpath "org.flywaydb:flyway-mysql:${flywayVersion}"  // MySQL 8.4 지원을 위해 추가
    }
}

plugins {
    id 'java'
    id 'war'
}

// flyway 플러그인 적용
apply plugin: 'org.flywaydb.flyway'

group 'org.scoula'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
    springVersion = '5.3.37'
    lombokVersion = '1.18.30'
    log4j2Version = '2.20.0'
    jacksonVersion = '2.15.3'
    aspectjVersion = '1.9.20'
    springKafkaVersion = '2.9.10'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

// Java 17로 업그레이드
sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {
    // Spring Framework
    implementation("org.springframework:spring-context:${springVersion}") {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
    implementation "org.springframework:spring-webmvc:${springVersion}"
    implementation 'javax.inject:javax.inject:1'

    // AOP
    implementation "org.aspectj:aspectjrt:${aspectjVersion}"
    implementation "org.aspectj:aspectjweaver:${aspectjVersion}"


    // Servlet API (Tomcat이 제공하므로 provided)
    providedCompile 'javax.servlet:javax.servlet-api:4.0.1'

    // JSP, SERVLET, JSTL
    compileOnly 'javax.servlet.jsp:javax.servlet.jsp-api:2.3.3'
    implementation 'javax.servlet:jstl:1.2'

    // Log4j2 Logging (버전 통일)
    implementation "org.apache.logging.log4j:log4j-api:${log4j2Version}"
    implementation "org.apache.logging.log4j:log4j-core:${log4j2Version}"
    implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4j2Version}"
    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'

    // xml내 한글 처리
    implementation 'xerces:xercesImpl:2.12.2'

    // Lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // Jackson - Json 처리 (버전 업그레이드)
    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"

    // 테스트
    testImplementation "org.springframework:spring-test:${springVersion}"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"

    // 데이터베이스
    implementation 'com.mysql:mysql-connector-j:8.1.0'
    implementation 'com.zaxxer:HikariCP:5.0.1'  // 버전 업그레이드
    implementation "org.springframework:spring-tx:${springVersion}"
    implementation "org.springframework:spring-jdbc:${springVersion}"

    // MyBatis (버전 업그레이드)
    implementation 'org.mybatis:mybatis:3.5.13'
    implementation 'org.mybatis:mybatis-spring:2.1.1'

    // Swagger 2.9.2 (더 안정적인 버전)
    implementation 'io.springfox:springfox-swagger2:2.9.2'
    implementation 'io.springfox:springfox-swagger-ui:2.9.2'


    // Flyway 최신 버전
    implementation 'org.flywaydb:flyway-core:10.19.0'
    implementation 'org.flywaydb:flyway-mysql:10.19.0'  // MySQL 8.4 지원

    //KAFKA
    implementation "org.springframework.kafka:spring-kafka:${springKafkaVersion}"

    // 스프링 시큐리티
    implementation 'org.springframework.security:spring-security-config:5.8.10'
    implementation 'org.springframework.security:spring-security-web:5.8.10'
    implementation 'org.springframework.security:spring-security-core:5.8.10'

    // JWT (JJWT)
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Redis (Lettuce 기반 클라이언트)
    implementation 'org.springframework.data:spring-data-redis:2.7.18'
    implementation 'io.lettuce:lettuce-core:6.3.1.RELEASE'

    // Bean Validation (JSR-380)
    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'org.hibernate.validator:hibernate-validator:6.0.20.Final'
    implementation 'org.glassfish:javax.el:3.0.0'

}


test {
    useJUnitPlatform()
}


